--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^5.1.3",
     "history": "^5.0.1",
+    "jdenticon": "^3.1.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.1",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.18.1",
     "react-router-dom": "^6.0.0-beta.8",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
