--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.4.1"
   },
+  "resolutions": {
+    "**/**/immer": "^9.0.6"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
